about section is totally free of css

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconscout/unicons": "^4.2.0",
     "boxicons": "^2.1.4",
+    "motion": "^12.7.4",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
