contact page full layout complete

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconscout/unicons": "^4.2.0",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "boxicons": "^2.1.4",
     "daisyui": "^5.0.28",
     "motion": "^12.7.4",
